--- a/app/src/main/res/drawable-v24/background_black_gradation.xml
+++ b/app/src/main/res/drawable-v24/background_black_gradation.xml
@@ -3,8 +3,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <gradient
-        android:startColor="@android:color/transparent"
-        android:endColor="#88000000"
+        android:endColor="@android:color/transparent"
+        android:startColor="#88000000"
         android:angle="270"/>
 
 </shape>
