--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,28 +4,31 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/bakery">
 
     <com.yuyakaido.android.cardstackview.CardStackView
         android:id="@+id/activity_main_card_stack_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingTop="32dp"
-        android:paddingBottom="32dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:clipToPadding="false"
+        android:paddingBottom="80dp"
         android:paddingLeft="16dp"
         android:paddingRight="16dp"
-        android:clipToPadding="false"
-        app:visibleCount="5"
-        app:swipeThreshold="0.75"
-        app:translationDiff="12"
-        app:scaleDiff="0.02"
-        app:stackFrom="top"
+        android:paddingTop="80dp"
         app:elevationEnabled="true"
-        app:swipeEnabled="true"
-        app:swipeDirection="freedom_no_bottom"
         app:leftOverlay="@layout/overlay_left"
         app:rightOverlay="@layout/overlay_right"
-        app:topOverlay="@layout/overlay_top" />
+        app:scaleDiff="0.02"
+        app:stackFrom="top"
+        app:swipeDirection="freedom_no_bottom"
+        app:swipeEnabled="true"
+        app:swipeThreshold="0.75"
+        app:topOverlay="@layout/overlay_top"
+        app:translationDiff="-12"
+        app:visibleCount="3" />
 
     <ProgressBar
         android:id="@+id/activity_main_progress_bar"
