--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,6 +12,7 @@
         android:layout_height="match_parent"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
         android:clipToPadding="false"
         android:paddingBottom="80dp"
         android:paddingLeft="16dp"
@@ -27,7 +28,9 @@
         app:swipeThreshold="0.75"
         app:topOverlay="@layout/overlay_top"
         app:translationDiff="-12"
-        app:visibleCount="3" />
+        app:visibleCount="3"
+        android:background="#d2d2d2"
+        />
 
     <ProgressBar
         android:id="@+id/activity_main_progress_bar"
