--- a/app/src/main/res/layout/activity_mypage.xml
+++ b/app/src/main/res/layout/activity_mypage.xml
@@ -21,7 +21,10 @@
             android:id="@+id/txv_toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center"
+            android:layout_above="@+id/Layout1"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:gravity="center_horizontal"
             android:text="마이페이지"
             android:textColor="#4b4b4b"
             android:textSize="15sp" />
@@ -36,6 +39,17 @@
         android:layout_below="@+id/toolbar">
 
 
+        <TextView
+            android:id="@+id/receivegukhwa"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/imageView"
+            android:layout_alignLeft="@+id/imageView"
+            android:layout_alignStart="@+id/imageView"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:layout_marginBottom="10dp"
+            android:text="받은 국화" />
     </LinearLayout>
 
     <RelativeLayout
@@ -81,15 +95,28 @@
     </RelativeLayout>
 
     <TextView
+        android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_above="@+id/imageView"
         android:layout_alignLeft="@+id/imageView"
         android:layout_alignStart="@+id/imageView"
         android:layout_centerVertical="true"
-        android:text="지나가던 유령"
         android:layout_marginBottom="10dp"
-        android:layout_above="@+id/imageView"
-        android:id="@+id/textView" />
+        android:layout_centerHorizontal="true"
+        android:text="지나가던 영혼" />
+
+    <ImageButton
+        android:id="@+id/edit"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:layout_alignBottom="@+id/textView"
+        android:layout_toEndOf="@+id/textView"
+        android:layout_toRightOf="@+id/textView"
+        android:background="@android:color/transparent"
+        android:scaleType="fitXY"
+        android:layout_centerHorizontal="true"
+        android:src="@drawable/icon_edit" />
 
     <ImageView
         android:id="@+id/imageView"
@@ -99,5 +126,6 @@
         android:layout_centerHorizontal="true"
         android:src="@drawable/profile4"
         android:layout_marginBottom="-40dp"/>
+
 
 </RelativeLayout>
