--- a/app/src/main/res/layout/fragment_two.xml
+++ b/app/src/main/res/layout/fragment_two.xml
@@ -10,4 +10,10 @@
         android:layout_height="match_parent"
         android:text="@string/hello_blank_fragment" />
 
+    <ImageButton
+        android:id="@+id/edit"
+        android:layout_width="178dp"
+        android:layout_height="226dp"
+        android:src="@drawable/icon_edit" />
+
 </FrameLayout>
