--- a/app/src/main/res/layout/item_mywriting.xml
+++ b/app/src/main/res/layout/item_mywriting.xml
@@ -1,27 +1,35 @@
-<?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<android.support.v7.widget.CardView
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/card_view"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    card_view:cardUseCompatPadding="true"
+    card_view:cardCornerRadius="8dp"
+    android:layout_marginBottom="16dp">
 
-    <android.support.v7.widget.CardView
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginBottom="8dp"
-        android:layout_marginTop="8dp"
-        app:cardCornerRadius="5dp">
+        android:layout_height="match_parent">
+
+        <ImageView
+            android:id="@+id/country_photo"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:scaleType="centerCrop" />
 
         <TextView
-            android:id="@+id/myWriting"
-            android:text="내가 쓴 글"
+            android:id="@+id/country_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"/>
+            android:gravity="center"
+            android:textSize="36sp"
+            android:text="사진제목(동적으로교체됨)"
+            android:textColor="#ffff99"
+            android:textStyle="bold"
+            android:layout_centerInParent="true"/>
 
+    </RelativeLayout>
 
-
-
-    </android.support.v7.widget.CardView>
-</android.support.constraint.ConstraintLayout>
+</android.support.v7.widget.CardView>
