--- a/app/src/main/res/layout/overlay_right.xml
+++ b/app/src/main/res/layout/overlay_right.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<android.support.v7.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:alpha="0.0"
     app:cardCornerRadius="8dp"
     app:cardElevation="0dp"
-    app:cardUseCompatPadding="true"
-    android:alpha="0.0">
+    app:cardUseCompatPadding="true">
 
     <!--
     <ImageView
